# mapc-surrogate

./: .gitignore  README.md  pyproject.toml
mapc_surrogate/: attributes.py  baselines.py  dataset.py  graphs.py  model.py  sim.py  training.py
mapc_surrogate/configs/: surrogate.yaml
mapc_surrogate/configs/model/: base.yaml
mapc_surrogate/configs/optimizer/: base.yaml
mapc_surrogate/configs/train/: base.yaml
mapc_surrogate/datasets/: random_val_dataset.pkl.lz4
mapc_surrogate/runs/surrogate_base/: config.yaml
mapc_surrogate/runs/surrogate_base/.hydra/: config.yaml  hydra.yaml
mapc_surrogate/runs/surrogate_base/19999/: _CHECKPOINT_METADATA
mapc_surrogate/runs/surrogate_base/19999/opt_state/: _METADATA  _sharding  manifest.ocdbt
mapc_surrogate/runs/surrogate_base/19999/opt_state/array_metadatas/: process_0
mapc_surrogate/runs/surrogate_base/19999/opt_state/ocdbt.process_0/: manifest.ocdbt
mapc_surrogate/runs/surrogate_base/19999/params/: _METADATA  _sharding  manifest.ocdbt
mapc_surrogate/runs/surrogate_base/19999/params/array_metadatas/: process_0
mapc_surrogate/runs/surrogate_base/19999/params/ocdbt.process_0/: manifest.ocdbt
mapc_surrogate/runs/surrogate_base/19999/train_key/jax_random_key/: _METADATA
mapc_surrogate/runs/surrogate_base/9999/: _CHECKPOINT_METADATA
mapc_surrogate/runs/surrogate_base/9999/opt_state/: _METADATA  _sharding  manifest.ocdbt
mapc_surrogate/runs/surrogate_base/9999/opt_state/array_metadatas/: process_0
mapc_surrogate/runs/surrogate_base/9999/params/: _METADATA  _sharding  manifest.ocdbt
(+11 files in other folders)
